--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "icon",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vue-heroicon",
+  "version": "0.1.4",
+  "description": "A simple component for loading Heroicons",
+  "homepage": "https://github.com/mdwheele/vue-heroicon",
+  "main": "./dist/icon.common.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --name icon ./src/components/index.js",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11"
-  },
   "devDependencies": {
+    "core-js": "^3.6.4",
+    "vue": "^2.6.11",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "html-loader": "^1.1.0",
+    "tailwindcss": "^1.3.5",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
