--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vue-heroicon",
-  "version": "0.3.0",
+  "version": "0.3.1",
+  "license": "MIT",
   "description": "A simple component for loading Heroicons",
   "homepage": "https://github.com/mdwheele/vue-heroicon",
   "main": "./dist/icon.common.js",
   "files": [
     "dist/*",
     "src/*",
-    "public/*",
     "*.json",
     "*.js"
   ],
