--- a/packages/vue-heroicon-next/package.json
+++ b/packages/vue-heroicon-next/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "prepublish": "cd bin && ./sync"
   },
   "dependencies": {
     "vue": "^3.0.5"
