--- a/packages/vue-heroicon-next/package.json
+++ b/packages/vue-heroicon-next/package.json
@@ -16,7 +16,7 @@
     "serve": "vite preview",
     "prepublish": "cd bin && ./sync"
   },
-  "dependencies": {
+  "peerDependencies": {
     "vue": "^3.0.5"
   },
   "devDependencies": {
