--- a/packages/vue-heroicon-next/package.json
+++ b/packages/vue-heroicon-next/package.json
@@ -1,8 +1,10 @@
 {
   "name": "vue-heroicon-next",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/vue-heroicon-next.umd.cjs",
   "module": "./dist/vue-heroicon-next.js",
   "exports": {
