--- a/packages/vue-heroicon-next/package.json
+++ b/packages/vue-heroicon-next/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "svgo": "^2.8.0",
     "vite": "^3.1.7",
     "vite-svg-loader": "^3.6.0"
   },
